[package]
name = "ocr_receipt"
version = "0.1.0"
edition = "2021"

[lib]
name = "ocr_receipt"
path = "src/lib.rs"

[[bin]]
name = "ocr_receipt"
path = "src/main.rs"


[dependencies]
image = {version = "0.25.2", features = ["png", "jpeg"], default-features = false}

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "contrast"
harness = false

[profile.release]
#lto = true

